chatsystem/frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatsystem-frontend
  namespace: mauriciovelez
spec:
  selector:
    app: chatsystem-frontend
  ports:
    - port: 80
      targetPort: 80
